Fix alignment of inputs in Search-Replace panel.

--- a/services/web/public/stylesheets/app/editor/search.less
+++ b/services/web/public/stylesheets/app/editor/search.less
@@ -33,6 +33,7 @@
 		input {
 			width: 210px;
 			display: inline-block;
+			vertical-align: middle;
 		}
 		.btn-group {
 			display: inline-block;
